--- a/network/tnfsd/README
+++ b/network/tnfsd/README
@@ -29,8 +29,8 @@ back in, to join the new group. Once this is done, the user can
 copy files to /var/tnfs (or ~tnfs) and they will be visible to TNFS
 clients.
 
-TNFS uses UDP port 16384, so make sure you allow incoming traffic if
-you have firewall rules.
+TNFS uses UDP and TCP ports 16384, so make sure you allow incoming
+traffic if you have firewall rules.
 
 This package includes the server and an init script for running
 tnfsd as a system daemon. To start tnfsd at boot, first edit
