--- a/graphics/Blender/README
+++ b/graphics/Blender/README
@@ -7,57 +7,11 @@ range of essential tools for the creation of 3D content, including
 modeling, uv-mapping, texturing, particle and other simulation,
 scripting, rendering, compositing, post-production and game creation.
 
-Installation of Blender and its dependent packages implies disk usage
-approaching 750M. This can increase dramatically with the inclusion of
-various optional dependencies. For instance, if libheif and openvdb
-packages are added (see below) the installation size is 1,735.41 MB.
+This SlackBuild builds Blender from source code using prepackaged
+official support libraries from blender.org
 
-CUDA support is included if cudatoolkit is installed.
-It may be disabled by passing CUDA=no when building:
-    CUDA=no bash ./Blender.SlackBuild
+After installing the built package, log out and back in again to
+enable launching from the desktop menu (at Graphics/Blender).
 
-CUDA support hasn't been thorougly tested, and may break the build. If
-so, build with CUDA=no and report a bug to the maintainer of this
-script.
-
-Optional dependency: embree. If installed, Blender will be built with
-support for it. It may be disabled by passing EMBREE=no when building:
-    EMBREE=no bash ./Blender.SlackBuild
-
-Note for 32-bit users: embree is 64-bit only, and can't be built on
-32-bit Slackware.
-
-Optional dependency: alembic-framework. If already installed, it will
-be automatically detected and incorporated when Blender is built.
-
-To enable support for OptiX Ray Tracing Engine, the OptiX SDK must be
-available in the build environment. Use the OPTIX_ROOT_DIR environment
-variable to identify the SDK location e.g.
-    OPTIX_ROOT_DIR=/home/chris/NVIDIA-OptiX-SDK-7.6.0-linux64-x86_64 bash ./Blender.SlackBuild
-
-Optional dependency: OpenShadingLanguage (OSL). If already installed,
-it will be automatically detected and incorporated when Blender is built.
-
-NOTE! OSL suports only x86_64 architecture
-NOTE! Not supported for blender version 3.3.10 and disabled in its
-configuration.
-
-Due to an unresolved issue with the current OSL version, generation of
-the blender manpage is suppressed when OSL is detected.
-
-Support for HEIF and AVIF image file formats are available through
-optional inclusion of the libheif package when building openimageio.
-This adds approximately 775M to the size of the Blender installation.
-
-Management and tools for manipulation and storage of "volumetric data",
-such as fog, clouds and "point cloud" in scientific data are available
-through optional inclusion of the openvdb package when building
-openimagio. This adds just over 250M to the total size of the Blender
-installation.
-
-This SlackBuild builds Blender from source code. For Slackware 15.0,
-due to its Python 3 version of 3.9.17, the Blender version to be built
-is restricted to version 3.3.10.
-
-See also: graphics/blender (note, lowercase B), which repackages the
+See also: graphics/blender (note, lowercase b), which repackages the
 official Blender x86_64 release binary.
