desktop/cde: Updated for version 2.5.3.
Signed-off-by: Willy Sudiarto Raharjo <willysr@slackbuilds.org>

--- a/desktop/cde/README
+++ b/desktop/cde/README
@@ -25,7 +25,6 @@ x1:4:respawn:/usr/dt/bin/dtlogin
 
 Optional Calendar instructions:
 
-
 If you want to use the Calendar application, you need the inetd and cmsd
 daemons, and you need to configure some additional files:
 
@@ -51,3 +50,6 @@ can either start it manually or add the following to /etc/rc.d/rc.local:
 if [ -x /etc/rc.d/rc.cmsd ]; then
   /etc/rc.d/rc.cmsd start
 fi
+
+PPS: Like the dtlogin caucion, there are security considerations
+with dtspcd, see: https://sourceforge.net/p/cdesktopenv/wiki/Home
