system/locust: Updated for version 2.34.0.
This is the last version that supports Python 3.9.

Signed-off-by: Willy Sudiarto Raharjo <willysr@slackbuilds.org>

--- a/system/locust/README
+++ b/system/locust/README
@@ -1,2 +1,4 @@
 Locust is an easy to use, scriptable and scalable performance testing
 tool.
+
+NOTE: Locust 2.34.0 is the last version that support Python 3.9.
