python/python3-xapp: Updated for version 3.0.2

--- a/python/python3-xapp/README
+++ b/python/python3-xapp/README
@@ -1,1 +1,3 @@
-This package provides the Python3 Xapp Library.
+python3-xapp (Python 3 XApp library)
+
+Small Python library providing XApp functionality.
