--- a/multimedia/strawberry/README
+++ b/multimedia/strawberry/README
@@ -2,4 +2,9 @@ Strawberry is a audio player and music collection organizer. It is a
  fork of Clementine released in 2018 aimed at music collectors, audio 
  enthusiasts and audiophiles. The name is inspired by the band 
  Strawbs. It's based on a heavily modified version of Clementine 
- created in 2012-2013. It's written in C++ and Qt 5.
+ created in 2012-2013. It's written in C++ and Qt 6.
+
+Discord users may want to add the optional dep "rapidjson".
+
+NOTE: If you have graphics-updates from testing installed, you do not
+      need cmake-opt.
