multimedia/iptvnator: Updated for version 0.18.0.
Signed-off-by: Andrew Clemons <andrew.clemons@gmail.com>

Signed-off-by: Willy Sudiarto Raharjo <willysr@slackbuilds.org>

--- a/multimedia/iptvnator/README
+++ b/multimedia/iptvnator/README
@@ -15,18 +15,16 @@ content.
 Features
 -  M3u and M3u8 playlists support
 -  Xtream Code (XC) and Stalker portal (STB) support
--  External player support - mvp, VLC
--  Add playlists from file system or from remote URL
--  Playlists auto-update feature on app startup
--  Search for channels
--  EPG support (TV Guide) with detailed info
--  TV archive/catchup/timeshift
--  Group-based channels list
--  Save channels as favorites
+-  External player support - MPV, VLC
+-  Add playlists from the file system or remote URLs 
+-  Automatic playlist updates on application startup
+-  Channel search functionality
+-  EPG support (TV Guide) with detailed information
+-  TV archive/catchup/timeshift functionality
+-  Group-based channel list
+-  Favorite channels management
 -  Global favorites aggregated from all playlists
--  HTML video player with hls.js support or Video.js based player
--  Internalization, currently 8 languages are supported (en, ru, de, ko,
-   es, zh, fr, it)
--  Set custom "User Agent" header for a playlist
--  Light and Dark theme
--  Version for self-hosted docker is available
+-  HTML video player with HLS.js support or Video.js-based player
+-  Internationalization with support for 16 languages
+-  Custom "User Agent" header configuration for playlists
+-  Light and Dark themes
