multimedia/acetoneiso: Updated for version 2.4.7.
Signed-off-by: Willy Sudiarto Raharjo <willysr@slackbuilds.org>

--- a/multimedia/acetoneiso/README
+++ b/multimedia/acetoneiso/README
@@ -16,3 +16,6 @@ use cdrkit from SBo and uninstall cdrtools.
 
 xorriso comes with Slackware so there is no need to install
 it from AlienBob's repository
+
+youtube-dl or yt-dlp is only needed if you are downloading
+videos using acetoneiso.
