python/python3-Flask-Compress: README and SlackBuild fixes.
Signed-off-by: Willy Sudiarto Raharjo <willysr@slackbuilds.org>

--- a/python/python3-Flask-Compress/README
+++ b/python/python3-Flask-Compress/README
@@ -1,2 +1,4 @@
 python3-Flask-Compress allows you to easily compress your Flask
 application's responses with gzip.
+
+NOTE: Cannot be upgraded further due to python-cffi version in 15.0
