--- a/development/Sphinx/README
+++ b/development/Sphinx/README
@@ -3,3 +3,5 @@ source files into various output formats, including HTML, ePub,
 LaTeX and plain text. Sphinx was originally created for the Python
 documentation, but it has excellent facilities for the documentation
 of software projects in a range of languages.
+
+NOTE: Sphinx-5.3.0 is the last version that works on Slackware 15.0
