python/python3-confuse: Note reasons for not updating.
Signed-off-by: Willy Sudiarto Raharjo <willysr@slackbuilds.org>

--- a/python/python3-confuse/README
+++ b/python/python3-confuse/README
@@ -4,3 +4,5 @@ Confuse is a configuration library for Python that uses YAML. It takes
 care of defaults, overrides, type checking, command-line integration,
 environment variable support, human-readable errors, and standard
 OS-specific locations.
+
+NOTE: 2.1.0 is the last version to support python-3.9
