--- a/multimedia/beets/README
+++ b/multimedia/beets/README
@@ -31,3 +31,5 @@ NOTE: beets now requires python3-numpy. While numpy will build without
       it I highly suggest installing OpenBLAS before building numpy. I
       would add it to the REQUIRES but it will not be in the proper
       order for numpy to build against OpenBLAS.
+
+NOTE: 2.5.1 is the last version to support python-3.9
