python/python3-jaraco.collections: Note reasons for not updating.
Signed-off-by: Willy Sudiarto Raharjo <willysr@slackbuilds.org>

--- a/python/python3-jaraco.collections/README
+++ b/python/python3-jaraco.collections/README
@@ -35,3 +35,8 @@ DictStack:
   A stack of dicts, great for sharing scopes.
 WeightedLookup:
   A specialized RangeMap for selecting an item by weights.
+
+NOTE: Upstream has removed the LICENSE file from the source repo and
+      I will not be updating until that situation has been resolved.
+      See https://github.com/pypa/setuptools/issues/5001 for the 
+      reasons this decision should be reversed.
