--- a/python/python3-wheel/README
+++ b/python/python3-wheel/README
@@ -4,3 +4,8 @@ This library is the reference implementation of the Python wheel
 packaging standard, as defined in PEP 427.
 
 Optional dependencies: python-keyring
+
+NOTE: newer versions have a requirement for "packaging >= 24.0".  This
+      would require modifying every dependee script to use *-opt
+      packages.  If a newer version is needed I will look at this
+      again. (same as python3-build)
