--- a/python/sphinx-rtd-theme/README
+++ b/python/sphinx-rtd-theme/README
@@ -5,3 +5,5 @@ This theme is primarily focused to be used on readthedocs.org but can
 work with your own sphinx projects.
 
 To read more and see a working demo head over to readthedocs.org.
+
+NOTE: newer versions drop support for Sphinx <6 so can't be upgraded
