--- a/python/python3-referencing/README
+++ b/python/python3-referencing/README
@@ -1,3 +1,5 @@
 python3-referencing (JSON Referencing + Python)
 
 An implementation-agnostic implementation of JSON reference resolution
+
+NOTE: 0.36.2 is last version to support python-3.9
