--- a/python/python3-poetry-core/README
+++ b/python/python3-poetry-core/README
@@ -4,3 +4,5 @@ A PEP 517 build backend implementation developed for Poetry. This
 project is intended to be a light weight, fully compliant,
 self-contained package allowing PEP 517 compatible build frontends to
 build Poetry managed projects.
+
+NOTE: 2.2.1 is the last version to support python-3.9
