python/python3-mediafile: Note reasons for not updating.
Signed-off-by: Willy Sudiarto Raharjo <willysr@slackbuilds.org>

--- a/python/python3-mediafile/README
+++ b/python/python3-mediafile/README
@@ -4,3 +4,5 @@ MediaFile is a simple interface to the metadata tags for many audio
 file formats. It wraps Mutagen, a high-quality library for low-level
 tag manipulation, with a high-level, format-independent interface
 for a common set of tags.
+
+NOTE: 0.13.0 is the last version to support python-3.9
