--- a/python/python3-tempora/README
+++ b/python/python3-tempora/README
@@ -1,1 +1,6 @@
 Objects and routines pertaining to date and time (python3-tempora).
+
+NOTE: Upstream has removed the LICENSE file from the source repo and
+      I will not be updating until that situation has been resolved.
+      See https://github.com/pypa/setuptools/issues/5001 for the
+      reasons this decision should be reversed.
