python/python3-cffi: Make a note in README.
Signed-off-by: Willy Sudiarto Raharjo <willysr@slackbuilds.org>

--- a/python/python3-cffi/README
+++ b/python/python3-cffi/README
@@ -3,3 +3,5 @@ project is to provide a convenient and reliable way of calling C code
 from Python.
 
 This is Python3 version of cffi
+NOTE: This package is conflict with python-cffi
+If you remove this package, it's suggested to reinstall python-cffi.
