--- a/office/zettlr/README
+++ b/office/zettlr/README
@@ -1,4 +1,5 @@
-Zettlr is a free and open-source note-taking application that works with Markdown files.
+Zettlr is a free and open-source note-taking application that works with
+Markdown files.
 
 Note:
 This slackbuild repackages the debian binary.
