--- a/development/gradle/README
+++ b/development/gradle/README
@@ -1,33 +1,36 @@
 Gradle is build automation evolved.
 
-Gradle can automate the building, testing, publishing, deployment and
-more of software packages or other types of projects such as generated
-static websites, generated documentation or indeed anything else.
+Gradle can automate the building, testing, publishing, deployment
+and more of software packages or other types of projects such
+as generated static websites, generated documentation or indeed
+anything else.
 
 Gradle combines the power and flexibility of Ant with the dependency
-management and conventions of Maven into a more effective way to build.
+management and conventions of Maven into a more effective way
+to build.
 
-Powered by a Groovy DSL and packed with innovation, Gradle provides a
-declarative way to describe all kinds of builds through sensible defaults.
-Gradle is quickly becoming the build system of choice for many open source
-projects, leading edge enterprises and legacy automation challenges.
+Powered by a Groovy DSL and packed with innovation, Gradle provides
+a declarative way to describe all kinds of builds through sensible
+defaults.  Gradle is quickly becoming the build system of choice
+for many open source projects, leading edge enterprises and legacy
+automation challenges.
 
 Excluding Documentation
 -----------------------
 
-If you would like to exclude the documentation in the generated package,
-you can use the following command when building the package:
+If you would like to exclude the documentation in the generated
+package, you can use the following command when building the package:
 
   # INCLUDE_DOCS=NO ./gradle.Slackbuild
 
 Dependencies
 ------------
 
-Gradle runs on Java Virtual Machine (JVM). A JVM version between 8 and
-24 is required to execute Gradle.
+Gradle runs on Java Virtual Machine (JVM). A JVM version between
+8 and 24 is required to execute Gradle.
 
-In the link given below, you can find the java version supported by a
-specific gradle release.
+In the link given below, you can find the java version supported
+by a specific gradle release.
 
 I have tested this using zulu-openjdk17.
 
