development/pnpm: Use nodejs as dependency in info.
Signed-off-by: Andrew Clemons <andrew.clemons@gmail.com>

Signed-off-by: Willy Sudiarto Raharjo <willysr@slackbuilds.org>

--- a/development/pnpm/README
+++ b/development/pnpm/README
@@ -1,1 +1,5 @@
 pnpm - Fast, disk space efficient package manager
+
+NOTE: The info file declares a dependency on nodejs - some version
+of node is needed at runtime and you can replace this with another
+version if required (as long as it is at least version 18.12).
